@@ -27,6 +27,7 @@
 - better quality for vips_resize() with linear/cubic kernels 
 - pyvips8 can create new metadata
 - better upsizing with vips_resize()
+- add imagemagick v7 support, thanks sachinwalia2k8 
 
 18/5/16 started 8.3.2
 - more robust vips image reading
